Create REST API Master Item Group Type
